@@ -3,6 +3,8 @@
 * CDKeys are now dumped to cdkeys.processed.txt in a well-formatted way
 * Added /accept and /decline for W3 clan management
 * Added options to customize the GUI font size and family
+* Switched some relevant settings to spinners in the GUI
+* Statstring performance improvements
 
 2.0.6 (r1400) 2008-04-21:
 * Added auto-rejoin afer being kicked (Issue 52)
